# Routing_data

./: .coverage  .gitignore  COMPLETE_IMPLEMENTATION.md  CONVERTER_README.md  COVERAGE_IMPROVEMENT_PLAN.md  DATABASE_USAGE_GUIDE.md  PHASE3_TEST_RESULTS.md  README.md  SESSION_SUMMARY.md  TESTING_SUMMARY.md  TEST_COMMANDS.md  TEST_PLAN_REVISED.md  ahh.md  config.yaml  convert_vrp.py  converter_cli.py  demonstrate_phase1.py  improvements.md  plan.md  pyproject.toml  pytest.ini  test_cli_direct.py  test_config.yaml  test_phase1_direct.py
.github/: copilot-instructions.md
.github/instructions/: test.instructions.md  testing_instructions.instructions.md
.github/prompts/: create_database.prompt.md  source_code_evaluation.prompt.md  thinking_protocol.prompt.md
.github/workflows/: ci.yml
datasets_processed/json/atsp/: br17.json  ft53.json  ft70.json  ftv170.json  ftv33.json  ftv35.json  ftv38.json  ftv44.json  ftv47.json  ftv55.json  ftv64.json  ftv70.json  kro124p.json  p43.json  rbg323.json  rbg358.json  rbg403.json  rbg443.json  ry48p.json
datasets_processed/json/cvrp/: Antwerp1.json  Antwerp2.json  Brussels1.json  Brussels2.json  Flanders1.json  Ghent1.json  Ghent2.json  Leuven1.json  Leuven2.json  Li_21.json  Li_22.json  Li_23.json  Li_24.json  Li_25.json  Li_26.json  Li_27.json  Li_28.json  Li_29.json  Li_30.json  Li_31.json  Li_32.json  Loggi-n1001-k31.json  Loggi-n401-k23.json  Loggi-n501-k24.json  Loggi-n601-k19.json  Loggi-n601-k42.json  Loggi-n901-k42.json  ORTEC-n242-k12.json  ORTEC-n323-k21.json  ORTEC-n405-k18.json  ORTEC-n455-k41.json  ORTEC-n510-k23.json  ORTEC-n701-k64.json  att48.json  eil13.json  eil22.json  eil23.json  eil30.json  eil31.json  eil33.json  (+9 more)
datasets_processed/json/d-vrp/: Li_21.json  Li_22.json  Li_23.json  Li_24.json  Li_25.json  Li_26.json  Li_27.json  Li_28.json  Li_29.json  Li_30.json  Li_31.json  Li_32.json
datasets_processed/json/hcp/: alb1000.json  alb2000.json  alb3000a.json  alb3000b.json  alb3000c.json  alb3000d.json  (+3 more)
docs/: DATABASE_CONNECTION_GUIDE.md  DATABASE_VALIDATION_REPORT.md  DOCUMENTATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  USER_GUIDE.md  comprehensive-testing-results.md  phase1.md  phase2.md  phase3.md
docs/archive/: README.md  agent-overnight.md  bug_analysis.md  database_architecture_analysis_oct2025.md  session_jan2025_db_corruption.md  session_oct2025_type_annotations.md
docs/development/: COMPREHENSIVE_TESTING_CRITIQUE.md  DEVELOPER_WORKFLOW.md  DEVELOPMENT_GUIDE.md  PROJECT_STATUS.md  README.md  TESTING_IMPROVEMENTS.md
docs/diagrams/: README.md  data-structures-algorithms.mmd  database-schema.md  error-handling-edge-cases.mmd  performance-scalability.mmd  processing-pipeline-flow.mmd
docs/guides/: GETTING_STARTED.md  PARQUET_EXPORT.md  README.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/modular-tasks/: task2-database.md
docs/reference/: API_REFERENCE.md  ARCHITECTURE.md  DESIGN_ANALYSIS.md  MATRIX_REVIEW.md  README.md  duckdb_limitations.md
docs/user-guide/: 01-development-journey.md  02-environment-setup.md  03-user-guide.md  04-command-reference.md  05-examples.md  06-database-schema.md  README.md
scripts/: database.ipynb  fix_d_vrp_types.py  inspect_database.py
scripts/migrations/: 001_fix_route_indexing.py  002_extract_explicit_edge_weights.py
src/converter/: __init__.py  __main__.py  api.py  config.py
src/format/: __init__.py  exceptions.py  extraction.py  loaders.py  models.py  parser.py
src/routing_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/tsplib_parser/: __init__.py  matrix.py  models.py  parser.py  validation.py
tests/: conftest.py  demo_parallel_query.py  test_complete_pipeline.py  test_edge_weights.py  test_full_pipeline.py  test_integration.py  test_phase1_integration.py  verify_database.py
tests/converter/: test_phase3.py
tests/test_converter/: test_converter_api.py  test_database.py  test_database_connection_leak.py  test_json_writer.py  test_json_writing_fixes.py  test_scanner.py  test_schema_migration_fixes.py  test_transformer.py
tests/test_format/: test_api_deprecation.py  test_extraction.py  test_format_parser.py  test_matrix_equivalence.py  test_matrix_validation.py  test_matrix_value_access.py
tests/test_integration/: test_cli.py  test_pipeline.py
tests/utils/: test_utilities.py
(+216 files in other folders)
