[project]
name = "routing-data"
version = "0.1.0"
description = "TSPLIB95 ETL Converter - Convert TSPLIB/VRP instances to JSON and DuckDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "deprecated>=1.2.18",
    "duckdb>=1.4.0",
    "networkx>=3.5",
    "psutil>=5.9.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
]

[project.scripts]
converter = "converter.cli.commands:cli"
